force-app/main/default/objects/Asset_Intake_Class__c/Asset_Intake_Class__c.object-meta.xml
<CustomObject>
    <label>Asset Intake Class</label>
    <nameField>
        <displayFormat>AIC-{00000}</displayFormat>
        <label>Asset Intake Classes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Intake Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>