force-app/main/default/objects/Asset_Intake_Class__c/fields/Client_Asset_Specification__c.field-meta.xml
<CustomField>
    <fullName>Client_Asset_Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Asset Specification</label>
    <referenceTo>SymphonyLF__Client_Classes_and_Goods_Specification__c</referenceTo>
    <relationshipLabel>Asset Intake Classes</relationshipLabel>
    <relationshipName>Asset_Intake_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>