force-app/main/default/objects/Asset_Intake_Class__c/fields/Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type__c</fullName>
    <label>Instance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>