force-app/main/default/objects/Asset_Intake_Class__c/fields/Standard_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Standard_Class_Name__c</fullName>
    <label>Standard Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>