force-app/main/default/objects/Asset_Intake_Class__c/fields/Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>Sub_Class__c</fullName>
    <label>Sub Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>